[check-manifest]
ignore =
          .coveragerc
          .isort.cfg
          .pydocstyle
          .readthedocs.yml
          readthedocs.yaml
          .remarkrc
          .style.yapf
          .travis.yml
          .yapfignore
          admin
          admin/*
          API.rst
          BACKENDS.rst
          bin
          bin/*
          CHANGELOG.rst
          CONTRIBUTING.rst
          doc8.ini
          docs
          docs/*
          minidcos.rb
          LICENSE
          Makefile
          README.rst
          codecov.yaml
          dev-requirements.txt
          indirect-requirements.txt
          lint.mk
          mypy.ini
          package.json
          packaging-requirements.txt
          pylintrc
          requirements.txt
          spelling_private_dict.txt
          src/vendorize.toml
          tests
          tests/*
          vagrant
          vagrant/*
          *.enc
          *.pyc
          *.rb
          *__pycache__*
          *.DS_Store

[mypy]
check_untyped_defs = True
disallow_incomplete_defs = True
disallow_subclassing_any = True
disallow_untyped_calls = True
disallow_untyped_decorators = False
disallow_untyped_defs = True
follow_imports = silent
ignore_missing_imports = True
no_implicit_optional = True
strict_equality = True
strict_optional = True
warn_no_return = True
warn_redundant_casts = True
warn_return_any = True
warn_unused_configs = True
warn_unused_ignores = True

[mypy-vws_cli/_version]
ignore_errors = true

[mypy-versioneer]
ignore_errors = True

[flake8]
exclude=./versioneer.py,
        ./src/vws_cli/_version.py,
        ./build/,

[isort]
multi_line_output=3
include_trailing_comma=true

[coverage:run]
branch = True
omit =
    *_vendor*
    src/*/_version.py

[yapf]
DEDENT_CLOSING_BRACKETS = true
BLANK_LINE_BEFORE_NESTED_CLASS_OR_DEF = true

[doc8]
max-line-length = 2000
ignore-path = ./node_modules,./src/*.egg-info/,./docs/build/spelling/output.txt

[pydocstyle]
# No summary lines
#   - D200
#   - D205
#   - D400
# We don't want blank lines before class docstrings
#   - D203
# We don't need docstrings to start at the first line
#   - D212
# Allow blank lines after function docstrings
#   - D202
# Section names do not need to end in newlines
#   - D406
# Section names do not need dashed underlines
#   - D407
# Click uses \b to stop wrapping, so we must allow backslashes in docstrings
#   - D301
# No blank line is needed after the last section
# We do not care about the imperative mood.
#   - D401
# We allow multi-line starts so we do not need the first line to end with
# punctuation
#   - D415
ignore = D200,D202,D203,D205,D212,D400,D406,D407,D413,D301,D401,D415
match=(?!.*(versioneer|_version)).*\.py

# See the docstring in versioneer.py for instructions. Note that you must
# re-run 'versioneer.py setup' after changing this section, and commit the
# resulting files.
[versioneer]
VCS = git
style = pep440
versionfile_source = src/vws_cli/_version.py
versionfile_build = vws_cli/_version.py
tag_prefix =
parentdir_prefix = vws_cli

[bdist_wheel]
universal = 1

[tool:pytest]
xfail_strict=true
log_cli=true

[metadata]
name = VWS CLI
description = 'A CLI for the Vuforia Web Services (VWS) API.'
long_description = file: README.rst
keywords = vuforia vws cli
license = MIT License
license_file = LICENSE
classifiers =
    Operating System :: POSIX
    Environment :: Web Environment
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: MIT License
    Development Status :: 5 - Production/Stable
url = https://github.com/adamtheturtle/vws-cli
author = Adam Dangoor
author_email = adamdangoor@gmail.com

[options]
zip_safe = False
include_package_data = True
# Avoid dependency links because they are not supported by Read The Docs.
#
# Also, they require users to use ``--process-dependency-links``.
dependency_links =
package_dir=
    =src
packages=find:

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    vws = vws_cli:vws_group
    vws-cloud-reco = vws_cli.query:vuforia_cloud_reco
