[flake8]
exclude=./.eggs,
        ./build/,

[metadata]
name = VWS CLI
description = 'A CLI for the Vuforia Web Services (VWS) API.'
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords = vuforia vws cli
license = MIT License
license_file = LICENSE
classifiers =
    Operating System :: POSIX
    Environment :: Web Environment
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: MIT License
    Development Status :: 5 - Production/Stable
url = https://github.com/VWS-Python/vws-cli
author = Adam Dangoor
author_email = adamdangoor@gmail.com

[options]
zip_safe = False
include_package_data = True
# Avoid dependency links because they are not supported by Read The Docs.
#
# Also, they require users to use ``--process-dependency-links``.
dependency_links =
package_dir =
    =src
packages = find:
python_requires = >=3.11

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    vws = vws_cli:vws_group
    vuforia-cloud-reco = vws_cli.query:vuforia_cloud_reco
